Fixed Alignment of Subscribe Button & some other enhancements

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -247,3 +247,16 @@
     }
   }
 }
+
+.programs-section{
+  padding: 0rem 4rem;
+  margin-top: 4rem; 
+  max-width: 1400px;
+  margin:auto;
+}
+@media(max-width:1150px)
+{
+  .programs-section{
+    padding: 0 0rem;
+  }
+}
