--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -57,3 +57,17 @@
     margin: 0;
   }
 }
+
+@media (min-width:870px) and (max-width: 1070px) {
+  #mc_embed_signup
+  {
+    width: 90%;
+  }
+}
+
+@media (min-width:768px) and (max-width: 869px) {
+  #mc_embed_signup
+  {
+    width: 100%;
+  }
+}
